--- a/src/blog/blog.css
+++ b/src/blog/blog.css
@@ -1,125 +1,164 @@
-@import url("https://use.typekit.net/ppg0eht.css");
+@import url('https://use.typekit.net/ppg0eht.css');
 @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;600&display=swap');
 
 .blog {
-    display: flex;
-    width: 100vw;
-    height: 100vh;
-    justify-content: center;
-    color:#44406C;
-    font-family: montserrat, sans-serif;
+	display: flex;
+	width: 100vw;
+	height: 100vh;
+	justify-content: center;
+	color: #44406c;
+	font-family: montserrat, sans-serif;
 }
 
-p {
-    font-size: 1.3rem;
-    color:#44406C;
-    font-family: montserrat, sans-serif;
+.blog p {
+	font-size: 1.3rem;
+	color: #44406c;
+	font-family: montserrat, sans-serif;
 }
 
-.blog-content {
-    display: flex;
-    flex-direction: column;
-    margin-top: 10rem;
-    flex-basis: 58vw;
+.blog .blog-content {
+	display: flex;
+	flex-direction: column;
+	margin-top: 10rem;
+	flex-basis: 58vw;
 }
 
-h1 {
-    display: flex;
-    flex-direction: column;
-    color: #25679e; 
-    font-family: montserrat, sans-serif;
-    font-size: 4rem;
-    font-weight: 700;
-    margin-block-start: 0;
-    margin-block-end: 1rem;
+.blog h1 {
+	display: flex;
+	flex-direction: column;
+	color: #25679e;
+	font-family: montserrat, sans-serif;
+	font-size: 4rem;
+	font-weight: 700;
+	margin-block-start: 0;
+	margin-block-end: 1rem;
 }
 
-h1 small {
-    color: #4189C4;
-    font-family: montserrat, sans-serif;
-    font-size: 2rem;
-    font-weight: 500;
+.blog h1 small {
+	color: #4189c4;
+	font-family: montserrat, sans-serif;
+	font-size: 2rem;
+	font-weight: 500;
 }
 
-.publish-information {
-    margin-left: 2rem;
-    display: flex;
-    width: fit-content;
-    align-items: center;
-    gap: 1rem;
+.blog .publish-information {
+	margin-left: 2rem;
+	display: flex;
+	width: fit-content;
+	align-items: center;
+	gap: 1rem;
 }
 
-.publish-information address {
-    display: flex;
-    align-items: center;
+.blog .publish-information address {
+	display: flex;
+	align-items: center;
 }
 
-.publish-information img {
-    width: 2rem;
-    height: 2rem;
-    border-width: 2px;
-    margin-right: .6rem;
-    color: #B77682;
-    border-style: solid;
-    border-radius: 3rem;
+.blog .publish-information img {
+	width: 2rem;
+	height: 2rem;
+	border-width: 2px;
+	margin-right: 0.6rem;
+	color: #b77682;
+	border-style: solid;
+	border-radius: 3rem;
 }
 
-.publish-information a {
-    height: min-content;
-    display: flex;
-    vertical-align: center;
-    font-size: 2rem;
-    font-style: normal;
-    text-decoration: none;
-    color: #B77682;
+.blog .publish-information a {
+	height: min-content;
+	display: flex;
+	vertical-align: center;
+	font-size: 2rem;
+	font-style: normal;
+	text-decoration: none;
+	color: #b77682;
 }
 
-.publish-information .publish-date {
-    margin-left: 2rem;
-    color: #756C98;
-    display: flex;
-    font-family: montserrat, sans-serif;
-    font-size: .8rem;
-    flex-direction: column;
+.blog .publish-information .publish-date {
+	margin-left: 2rem;
+	color: #756c98;
+	display: flex;
+	font-family: montserrat, sans-serif;
+	font-size: 0.8rem;
+	flex-direction: column;
 }
 
-.publish-information time {
-    font-size: 1rem;
-    font-family: 'Source Code Pro', monospace;
+.blog .publish-information time {
+	font-size: 1rem;
+	font-family: 'Source Code Pro', monospace;
 }
 
-article {
-    margin-top: 3rem;
-    display: flex;
-    flex-direction: column;
+.blog article {
+	margin-top: 3rem;
+	display: flex;
+	flex-direction: column;
 }
 
-.right-aligned {
-    display: flex;
-    justify-content: flex-end;
+.blog .right-aligned {
+	display: flex;
+	justify-content: flex-end;
 }
 
-.skills {
-    border-width: 1px;
-    border-color:#44406C;
-    border-radius: 5.px;
-    width: 25ch;
+.blog .skills {
+	border-width: 1px;
+	border-color: #44406c;
+	border-radius: 5px;
+	width: 25ch;
 }
 
-.header-image {
-    margin: 3rem;
+.blog .header-image {
+	margin: 3rem;
 }
 
-.medium-image {
-    align-self: center;
-    width: 400px;
+.blog .medium-image {
+	align-self: center;
+	width: 400px;
 }
-.large-image {
-    align-self: center;
-    width: 800px;
+.blog .large-image {
+	align-self: center;
+	width: 800px;
 }
 
-p strong {
-    color:#4189C4;
-    font-weight: 600;
+.blog p strong {
+	color: #4189c4;
+	font-weight: 600;
+}
+
+.blog-card {
+	width: 300px;
+	height: fit-content;
+	display: flex;
+	flex-direction: column;
+	padding: 2rem;
+	border-width: 1px;
+	border-style: solid;
+	border-color: #44406c;
+	border-radius: 1rem;
+}
+
+.blog-card img {
+	width: 100%;
+	height: auto;
+	margin-bottom: 0.75rem;
+}
+
+.blog-card h2 {
+	color: #25679e;
+	font-family: montserrat, sans-serif;
+	font-size: 1.3rem;
+	font-weight: 500;
+	margin-block-start: 0;
+	margin-block-end: 0rem;
+}
+
+.blog-card p {
+	font-size: 1rem;
+	color: #44406c;
+	font-family: montserrat, sans-serif;
+}
+
+.blog-card time {
+	align-self: flex-end;
+	color: #756c98;
+	font-family: 'Source Code Pro', monospace;
 }
