--- a/src/App.css
+++ b/src/App.css
@@ -467,6 +467,7 @@ nav .active::before {
 #about-section .left .jpg {
 	min-width: 200px;
 	width: 30vw;
+	height: auto;
 	border-style: solid;
 	border-width: 1px;
 	border-color: black;
@@ -843,13 +844,13 @@ nav .active::before {
 		height: auto;
 	}
 
-	.arrow-down line,
-	.arrow-down polyline {
+	.arrow-down path {
+		fill: none;
 		stroke: #4189c4;
 		stroke-width: 2px;
 	}
 
-	.arrow-down line {
+	.arrow-down .line {
 		stroke-dasharray: 6px;
 		animation: arrow-dash 1s 0s linear forwards;
 		animation-iteration-count: infinite;
@@ -918,6 +919,7 @@ nav .active::before {
 
 	#skills-section article img {
 		width: 400px;
+		height: auto;
 	}
 
 	#projects-section article {
